--- a/src/css/fonts/fonts.scss
+++ b/src/css/fonts/fonts.scss
@@ -28,25 +28,25 @@
   font-family: 'Metropolis';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/Metropolis-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/metropolis.bold.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../fonts/Metropolis-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/Metropolis-Bold.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/Metropolis-Bold.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/Metropolis-Boldttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/Metropolis-Bold.svg#Mulish') format('svg'); /* Legacy iOS */
+       url('../fonts/metropolis.bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/metropolis.bold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/metropolis.bold.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/metropolis.bold.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/metropolis.bold.svg#Mulish') format('svg'); /* Legacy iOS */
 }
 
 @font-face {
   font-family: 'Metropolis';
   font-style: normal;
   font-weight: 600;
-  src: url('../fonts/Metropolis-SemiBold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/metropolis.semi-bold.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../fonts/Metropolis-SemiBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/Metropolis-SemiBold.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/Metropolis-SemiBold.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/Metropolis-SemiBold') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/Metropolis-SemiBold.svg#Mulish') format('svg'); /* Legacy iOS */
+       url('../fonts/metropolis.semi-bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/metropolis.semi-bold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/metropolis.semi-bold.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/metropolis.semi-bold.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/metropolis.semi-bold.svg#Mulish') format('svg'); /* Legacy iOS */
 }
 
