--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -292,10 +292,10 @@
     transition: all 0.3s ease 0s;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
     justify-content: flex-start;
-
-
+    @media screen and (max-width:576px){
+      margin: 5px;
+    }
     &:hover {
       border: solid 3px #717cff;
     }
@@ -326,9 +326,7 @@
     letter-spacing: 0.44px;
     text-align: left;
     color: rgba(55, 71, 79, 0.72);
-    // flex: 0 0 auto;
     height: 100%;
-
   }
 
   &__btn {
@@ -349,6 +347,428 @@
     &:hover {
       border: solid 2px #717cff;
     }
+  }
+}
+
+.news {
+
+  padding: 200px 0 222px 0;
+  @media screen and (max-width:576px){
+    padding: 120px 0 102px 0;
+   }
+  position: relative;
+
+  &__background {
+    position: absolute;
+    max-width: 1212px;
+    width: 100%;
+    height: 1100px;
+    margin: 73px 62px 0 0;
+    padding: 205px 328px 299px 148px;
+    background-color: #fafafa;
+    left: 0;
+    z-index: -1;
+    @media screen and (max-width:576px){
+      display: none;
+    }
+  }
+
+  &__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 90px;
+    @media screen and (max-width:1210px){
+      margin-top: 40px;
+     }
+
+  }
+
+  &__card {
+    max-width: 344px;
+    height: 406px;
+    margin: 0 23px;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 30px;
+    box-shadow: 0 6px 42px 0 rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    @media screen and (max-width:576px){
+      height: 350px;
+      margin: 0 5px;
+    }
+
+  }
+
+  &__img {
+    @media screen and (max-width:576px){
+      width: 100%;
+     }
+  }
+
+  &__data {
+
+    margin: 28px 0 0 56px;
+    font-family: 'Metropolis';
+    font-size: 16px;
+    font-weight: 600;
+    text-align: left;
+    color: #565656;
+  }
+
+  &__title {
+    margin: 15px 0 0 26px;
+    font-family: 'Metropolis';
+    font-size: 22px;
+    font-weight: bold;
+    text-align: left;
+    color: #252525;
+    height: 1em;
+    overflow-y: hidden;
+  }
+
+  &__btn {
+    width: 226px;
+    height: 64px;
+    margin-top: 146px ;
+    padding: 12px 32.5px 19px 34px;
+    border-radius: 11px;
+    background-color: #717cff;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 1.82;
+    text-align: left;
+    color: #ffffff;
+    @media screen and (max-width:576px){
+      margin-top: 86px ;
+      width: 186px;
+    height: 64px;
+    }
+  }
+}
+
+.events {
+
+  padding-bottom: 203px;
+
+  &__container {
+    max-width: 1200px;
+    margin-top: 100px;
+    box-shadow: 0 0 77px 0 rgba(0, 0, 0, 0.06);
+    @media screen and (max-width:1200px){
+      max-width: 980px;
+     }
+     @media screen and (max-width:992px){
+      max-width: 580px;
+     }
+     @media screen and (max-width:576px){
+      max-width: 320px;
+      margin-top: 60px;
+     }
+  }
+
+  &__card {
+    flex-direction: column;
+    align-items: center;
+    max-width: 540px;
+    padding: 29px 27.6px 31px 31px;
+    margin: 0 30px;
+    border-radius: 15px;
+    box-shadow: 0 0 77px 0 rgba(0, 0, 0, 0.07);
+    background-color: #ffffff;
+    @media screen and (max-width:576px){
+      padding: 20px;
+      margin: 0 10px;
+    }
+  }
+
+  &__up {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  &__data {
+    width: 76px;
+    height: 76px;
+    margin: 0 19px 29px 0;
+    padding: 10px 22.5px;
+    border-radius: 11px;
+    background-color: rgba(113, 125, 255, 0.14);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p{
+
+      font-size: 18px;
+      font-weight: 600;
+      text-align: center;
+      color: #717cff;
+      span{
+        font-size: 27px;
+        font-weight: bold;
+       }
+      }
+    }
+
+  &__title {
+
+    font-size: 24px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.54;
+    letter-spacing: normal;
+    text-align: left;
+    color: #37474f;
+    @media screen and (max-width:1400px){ }
+    font-size: 18px;
+  }
+
+  &__text {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.75;
+    letter-spacing: 0.44px;
+    margin-bottom: 25px;
+    text-align: left;
+    color: rgba(55, 71, 79, 0.72);
+  }
+
+  &__down {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  &__btn {
+    font-size: 17px;
+    font-weight: bold;
+    letter-spacing: 0.44px;
+    text-align: left;
+    color: #717cff;
+    @media screen and (max-width:576px){
+      font-size: 15px;
+     }
+
+  }
+
+  &__time {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.75;
+    letter-spacing: 0.44px;
+    text-align: right;
+    color: #373737;
+    @media screen and (max-width:576px){
+      font-size: 14px;
+     }
+  }
+
+}
+
+.countries {
+
+  background: #fafafa;
+  padding: 82px 0 233px 0;
+  @media screen and (max-width:768px){
+    padding: 82px 0 180px 0;
+   }
+
+  &__container {
+      max-width: 1140px;
+      margin-top: 77px;
+      @media screen and (max-width:1200px){
+        max-width: 980px;
+      }
+      @media screen and (max-width:992px){
+        max-width: 730px;
+       }
+       @media screen and (max-width:768px){
+        max-width: 560px;
+        }
+        @media screen and (max-width:576px){
+          max-width: 320px;
+         }
+    }
+
+  &__card {
+    margin: 0 20px;
+    @media screen and (max-width:576px){
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+     }
+
+  }
+
+  &__img {
+    border-radius: 29px;
+    overflow: hidden;
+    @media screen and (max-width:1200px){
+      img {
+        width: 100%;
+      }
+      max-width: 300px;
+    }
+  }
+
+  &__title {
+    margin: 27px 0px 7px 0;
+    font-size: 25px;
+    font-weight: 600;
+    text-align: left;
+    color: #37474f;
+  }
+
+  &__text {
+    max-width: 348px;
+    @media screen and (max-width:576px){
+      max-width: 300px;
+    }
+    margin: 7px 0 0;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.69;
+    text-align: left;
+    color: rgba(55, 71, 79, 0.72);
+    max-height: 3em;
+    overflow-y: hidden;
+  }
+}
+
+.testomonial {
+
+  padding: 115px 0 196px 0;
+  @media screen and (max-width:576px){
+    padding: 80px 0 120px 0;
+   }
+
+  &__slider {
+    max-width: 1150px;
+    margin-top: 102px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.06);
+    @media screen and (max-width:1200px){
+      max-width: 980px;
+     }
+     @media screen and (max-width:992px){
+      max-width: 740px;
+     }
+     @media screen and (max-width:768px){
+      max-width: 540px;
+      }
+      @media screen and (max-width:576px){
+        max-width: 300px;
+        margin-top: 60px;
+      }
+  }
+
+  &__card {
+    max-width: 503px;
+    margin: 0 30px;
+    padding: 39px 34px 46px;
+    border-radius: 29px;
+    box-shadow: 0 0 77px 0 rgba(0, 0, 0, 0.065);
+    background-color: #ffffff;
+    @media screen and (max-width:576px){
+      margin: 0px;
+     }
+  }
+
+  &__up {
+
+    display: flex;
+
+  }
+
+  &__img {
+    border-radius: 12px;
+    overflow: hidden;
+    min-width: 62px;
+    height: 62px;
+  }
+
+  &__name {
+
+    margin: 5px 0 0 27px;
+    font-size: 22px;
+    font-weight: 600;
+    text-align: left;
+    color: #37474f;
+  }
+
+  &__prof {
+
+    margin: 10px 0px 33px 27px;
+    opacity: 0.65;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: left;
+    color: #37474f;
+  }
+
+  &__text {
+    max-width: 435px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.72;
+    text-align: left;
+    color: rgba(55, 71, 79, 0.72);
+    height: 8em;
+    overflow-y: hidden;
+  }
+}
+
+
+.ready {
+
+  background-color: #fafafa;
+  padding: 80px 150px;
+
+  @media screen and (max-width:1200px){
+    padding: 80px 40px;
+  }
+
+
+  .container {
+    flex-direction: row;
+    justify-content: space-between;
+    @media screen and (max-width:768px){
+      flex-direction: column;
+    }
+  }
+
+  &__title {
+
+    margin: 10px 0px 5px 0;
+    font-size: 37px;
+    font-weight: 600;
+    text-align: center;
+    color: #252525;
+    @media screen and (max-width:992px){
+      font-size: 29px;
+    }
+  }
+
+  &__btn {
+    width: 262px;
+    height: 64px;
+    padding: 12px 32.5px 19px 34px;
+    border-radius: 11px;
+    background-color: #717cff;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 1.82;
+    text-align: left;
+    color: #ffffff;
+    @media screen and (max-width:992px){
+      width: 210px;
+    }
+    @media screen and (max-width:768px){
+      margin-top: 30px;
+     }
   }
 }
 
@@ -384,6 +804,8 @@
   letter-spacing: 0.44px;
   text-align: center;
   color: rgba(55, 71, 79, 0.72);
+  max-height: 7em;
+  overflow-y: hidden;
 }
 
 // Support Classes
@@ -496,6 +918,42 @@
  // Sliders
 
 
+ .countries__container.slick-slider {
+  position: relative;
+
+  .slick-list {
+    overflow: hidden;
+  }
+  .slick-track{
+    display: flex;
+  }
+
+  .slick-dots {
+    position: absolute;
+    display: flex;
+    left: calc(50% - 70px);
+    top: 400px;
+    @media screen and (max-width:768px){
+      top: 350px;
+    }
+     @media screen and (max-width:576px){
+      top: 370px;
+      left: calc(50% - 129px);
+      }
+    li button{
+      font-size: 0;
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background-color: rgba(124, 124, 124, 0.32);
+      margin: 0 10px;
+    }
+    li.slick-active button{
+      background-color: #717cff;
+    }
+  }
+ }
+
  .featured__slider.slick-slider {
   position: relative;
   .slick-list {
@@ -526,6 +984,77 @@
     }
   }
 
-
-
 }
+
+.events__container.slick-slider {
+
+  position: relative;
+
+  .slick-list {
+    overflow: hidden;
+  }
+  .slick-track{
+    display: flex;
+  }
+
+  .slick-dots {
+    position: absolute;
+    display: flex;
+    left: calc(50% - 70px);
+    top: 450px;
+    @media screen and (max-width:992px){
+      left: calc(50% - 136px);
+     }
+     @media screen and (max-width:576px){
+      top: 490px;
+      }
+    li button{
+      font-size: 0;
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background-color: rgba(124, 124, 124, 0.32);
+      margin: 0 10px;
+    }
+    li.slick-active button{
+      background-color: #717cff;
+    }
+  }
+}
+
+.testomonial__slider.slick-slider {
+
+  position: relative;
+
+  .slick-list {
+    overflow: hidden;
+  }
+  .slick-track{
+    display: flex;
+  }
+
+  .slick-dots {
+    position: absolute;
+    display: flex;
+    left: calc(50% - 70px);
+    top: 400px;
+    @media screen and (max-width:992px){
+      left: calc(50% - 70px);
+     }
+     @media screen and (max-width:576px){
+      top: 410px;
+      }
+    li button{
+      font-size: 0;
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background-color: rgba(124, 124, 124, 0.32);
+      margin: 0 10px;
+    }
+    li.slick-active button{
+      background-color: #717cff;
+    }
+  }
+}
+
