--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -364,13 +364,10 @@
     width: 100%;
     height: 1100px;
     margin: 73px 62px 0 0;
-    padding: 205px 328px 299px 148px;
     background-color: #fafafa;
     left: 0;
     z-index: -1;
-    @media screen and (max-width:576px){
-      display: none;
-    }
+
   }
 
   &__container {
@@ -397,7 +394,7 @@
     flex-direction: column;
     @media screen and (max-width:576px){
       height: 350px;
-      margin: 0 5px;
+      margin: 15px 5px;
     }
 
   }
@@ -771,6 +768,124 @@
      }
   }
 }
+
+
+.footer {
+
+  background:#717cff;
+  padding: 64px 0 53px 0;
+
+  &__container {
+    flex-direction: row;
+    justify-content: space-between;
+    @media screen and (max-width:768px){
+      flex-wrap: wrap;
+     }
+     @media screen and (max-width:394px){
+      flex-direction: column;
+      justify-content: flex-start;
+      }
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    @media screen and (max-width:768px){
+      margin-bottom: 20px;
+    }
+    @media screen and (max-width:394px){
+      align-items: center;
+      }
+  }
+
+  &__logo {
+    margin-bottom: 26px;
+  }
+
+  &__text {
+    max-width: 343px;
+    margin-bottom: 66px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.78;
+    text-align: left;
+    color: #eeeeee;
+    @media screen and (max-width:768px){
+      margin-bottom: 40px;
+    }
+    @media screen and (max-width:394px){
+      text-align: center;
+       }
+  }
+
+  &__copyriting {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.78;
+    text-align: left;
+    color: #eeeeee;
+    @media screen and (max-width:394px){
+     text-align: center;
+      }
+  }
+
+  &__column {
+    display: flex;
+    flex-direction: column;
+    @media screen and (max-width:768px){
+      margin: 0 20px;
+      margin-bottom: 20px;
+    }
+    @media screen and (max-width:394px){
+      align-items: center;
+      }
+  }
+
+  &__item {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 2.72;
+    text-align: left;
+    color: #eeeeee;
+  }
+
+  &__socials {
+    display: flex;
+    margin-top: auto;
+    @media screen and (max-width:992px){
+      flex-direction: column;
+      margin-top: initial;
+    }
+    @media screen and (max-width:768px){
+      flex-direction: row;
+     }
+     @media screen and (max-width:546px){
+      flex-direction: column;
+      }
+      @media screen and (max-width:414px){
+        flex-direction: row;
+      }
+  }
+
+  &__icon {
+    margin: 0 14px;
+    color: #ffffff;
+    @media screen and (max-width:992px){
+      margin: 14px 0;
+     }
+     @media screen and (max-width:768px){
+      margin: 0 14px;
+     }
+     @media screen and (max-width:546px){
+      margin: 14px 0;
+      }
+      @media screen and (max-width:414px){
+        margin: 0 14px;
+      }
+  }
+}
+
 
 
 
